--- a/css/main.css
+++ b/css/main.css
@@ -104,7 +104,7 @@ nav li {
 }
 
 nav a {
-	font-weight: 800;
+	font-weight: 400;
 	padding: 17px 10px;
 }
 
@@ -119,6 +119,10 @@ div.second-nav {
 	margin: 0 auto;
 	text-align: center;
 	float: left;
+}
+
+nav.secondary-nav a {
+	font-weight: 400;
 }
 
 .secondary-nav li {
